reduce plugins